--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ ext {
     lifecycleVersion = '2.0.0-beta01'
     androidxVersion = '1.0.0-beta01'
     constraintlayoutVersion = '1.1.2'
+    leakCanaryVersion = '1.6.1'
 }
 
 
@@ -49,8 +50,9 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycleVersion"
 
     // leak canary
-    debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.6.1'
-    debugImplementation 'com.squareup.leakcanary:leakcanary-support-fragment:1.6.1'
+    debugImplementation "com.squareup.leakcanary:leakcanary-android:$leakCanaryVersion"
+    debugImplementation "com.squareup.leakcanary:leakcanary-support-fragment:$leakCanaryVersion"
+    releaseImplementation "com.squareup.leakcanary:leakcanary-android-no-op:$leakCanaryVersion"
 
     // test
     testImplementation 'junit:junit:4.12'
